Giang commit update API
